Delete function etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="action_create">Create</string>
     <string name="share_widget">Share</string>
+    <string name="search_string">Search</string>
 
 </resources>
